# MAG

./: CMakeLists.txt  README.md  poc-file-tool.md  poc-llm-adapter.md  poc-main-script.md  poc-objective.md
docs/: PROVIDERS.md
include/: bash_tool.h  cli_interface.h  config.h  conversation_manager.h  coordinator.h  file_operations.h  http_client.h  input_handler.h  llm_client.h  llm_provider.h  message.h  policy.h  policy_config.h  readline_input_handler.h  simple_input_handler.h  todo_manager.h  utils.h
include/interfaces/: file_client_interface.h  llm_client_interface.h
include/network/: nng_file_client.h  nng_llm_client.h
include/providers/: anthropic_provider.h  gemini_provider.h  mistral_provider.h  openai_provider.h
src/: CMakeLists.txt
src/bash_tool/: main.cpp
src/common/: bash_tool.cpp  cli_interface.cpp  conversation_manager.cpp  http_client.cpp  input_handler.cpp  llm_provider.cpp  message.cpp  policy.cpp  policy_config.cpp  readline_input_handler.cpp  simple_input_handler.cpp  todo_manager.cpp  utils.cpp
src/file_tool/: file_operations.cpp  main.cpp
src/llm_adapter/: llm_client.cpp  main.cpp
src/network/: nng_file_client.cpp  nng_llm_client.cpp
src/orchestrator/: coordinator.cpp  main.cpp
src/providers/: anthropic_provider.cpp  gemini_provider.cpp  mistral_provider.cpp  openai_provider.cpp
tests/: CMakeLists.txt  test_cli_interface.cpp  test_coordinator_interfaces.cpp  test_coordinator_parsing.cpp  test_file_operations.cpp  test_llm_client.cpp  test_message.cpp  test_policy.cpp
